# laplace-uq-bench

./: .gitignore  DECISIONS.md  README.md  pyproject.toml
configs/: ddpm.yaml  ddpm_improved.yaml  ddpm_phase2.yaml  ensemble.yaml  ensemble_phase2.yaml  flow_matching.yaml  fno.yaml  physics_ddpm.yaml  unconditional_ddpm.yaml  unet_regressor.yaml
docs/: benchmark_results.md  build_theory.sh  header.tex  matched_5v5_comparison.md  theory.md
docs/plans/: 2026-03-27-day1-pde-solver-dataset.md  2026-03-27-design.md  2026-03-28-full-implementation.md  2026-03-30-revised-phase2.md  2026-03-31-conformal-evaluation.md
experiments/: ddpm_phase1_results.json  fig5_data.npz  phase1_results.json
experiments/conformal/: conformal_results.json
experiments/ddpm_improved/: history.json
experiments/flow_matching/: history.json
experiments/functional_crps/: functional_crps_results.json
modal/: requirements.txt  train_remote.py
modal_deploy/: dps_experiments.py  dps_preflight.py  dps_zero_shot.py  evaluate_remote.py  train_remote.py
scripts/: diagnose_ddpm.py  evaluate.py  evaluate_phase2.py  plot_figures.py  run_all_experiments.sh  train.py
tests/: test_boundary.py  test_conditioning.py  test_conformal.py  test_dataset.py  test_ddpm.py  test_dps.py  test_ensemble.py  test_flow_matching.py  test_fno.py  test_functionals.py  test_generate.py  test_improved_ddpm.py  test_laplace_solver.py  test_metrics.py  test_observation.py  test_partial_resume.py  test_physics_ddpm.py  test_trainer.py  test_unconditional_ddpm.py  test_unet.py  test_uq_metrics.py
(+23 files in other folders)
