[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "diffphys"
version = "0.1.0"
description = "Benchmarking generative surrogates for PDE solution fields"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
